[gd_scene load_steps=16 format=3 uid="uid://c3bbdmlwkunbe"]

[ext_resource type="Script" path="res://Scenes/Enemy/Redslime.gd" id="1_iwk08"]
[ext_resource type="PackedScene" uid="uid://cdobh1cyly5vm" path="res://Scenes/killzone.tscn" id="2_fdu1e"]
[ext_resource type="Texture2D" uid="uid://daf1nuehfb2vs" path="res://Assets/sprites/slime_purple.png" id="3_vjr4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4j1w"]
size = Vector2(10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_taif5"]
atlas = ExtResource("3_vjr4d")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_02a8c"]
atlas = ExtResource("3_vjr4d")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1242"]
atlas = ExtResource("3_vjr4d")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqdxl"]
atlas = ExtResource("3_vjr4d")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b37xs"]
atlas = ExtResource("3_vjr4d")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3auhq"]
atlas = ExtResource("3_vjr4d")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_shatb"]
atlas = ExtResource("3_vjr4d")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhhst"]
atlas = ExtResource("3_vjr4d")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_um0qr"]
atlas = ExtResource("3_vjr4d")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghgoe"]
atlas = ExtResource("3_vjr4d")
region = Rect2(24, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_roxuw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_taif5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02a8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1242")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqdxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b37xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3auhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shatb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhhst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um0qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghgoe")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Redslime" type="Node2D"]
script = ExtResource("1_iwk08")

[node name="Killzone" parent="." instance=ExtResource("2_fdu1e")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_p4j1w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_roxuw")
autoplay = "default"
frame_progress = 0.587804

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-7, 0)

[node name="goopCD" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="goopCD" to="." method="_on_timer_timeout"]
